fix: remove dark mode support (fix #37)

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -6,12 +6,7 @@
 
 @plugin "@tailwindcss/typography";
 
-/* refs: https://daisyui.com/docs/themes/ */
-@plugin "daisyui" {
-  themes: light --default, dark --prefersdark;
-  /* refs: https://github.com/saadeghi/daisyui/issues/3882#issuecomment-3382480890 */
-  exclude: properties;
-}
+@plugin "daisyui";
 
 /* animations */
 @keyframes fade-in {
